Enhance navigation styles with logo separator and adjust breadcrumbs padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -208,6 +208,19 @@ nav {
     margin-right: auto;
     display: flex;
     align-items: center;
+    position: relative;
+    padding-right: 1rem;
+}
+
+.logo-left::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+    width: 1px;
+    background-color: var(--light-text);
+    opacity: 0.3;
 }
 
 .logo-center {
@@ -677,7 +690,6 @@ a:focus, button:focus, input:focus, select:focus, textarea:focus {
 }
 
 .breadcrumbs-inner {
-    padding-top: 0.4rem;
     max-width: var(--content-width);
     margin: 0 auto;
     display: flex;
