Refactor logo structure in navbar for improved layout and styling consistency

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,7 +1,13 @@
 <nav data-aos="fade-down" data-aos-duration="800">
   <div class="logo">
-    <img src="public/assets/icon/favicon.png" alt="AML Logo" class="nav-icon" />
-    <span class="logo-left">Republic Act No. 9160</span>
+    <div class="logo-container">
+      <img
+        src="public/assets/icon/favicon.png"
+        alt="AML Logo"
+        class="nav-icon"
+      />
+      <span class="logo-left">Republic Act No. 9160</span>
+    </div>
     <span class="logo-center">ANTI-MONEY LAUNDERING EXPERT SYSTEM</span>
     <span class="logo-short">AML EXPERT SYSTEM</span>
   </div>
