--- a/css/styles.css
+++ b/css/styles.css
@@ -194,7 +194,7 @@ nav {
 
 .logo {
     font-family: 'Instrument Serif', 'Times New Roman', serif;
-    padding: 1rem 0;
+    padding: 0;
     color: var(--light-text);
     display: flex;
     align-items: center;
@@ -202,18 +202,15 @@ nav {
     width: 100%;
 }
 
-.logo-left {
-    font-size: 1.2rem;
-    min-width: 100px;
-    margin-right: auto;
+.logo-container {
     display: flex;
     align-items: center;
+    height: var(--nav-height);
+    padding: 0 1rem;
     position: relative;
-    padding-right: 1rem;
-    height: 100%;
 }
 
-.logo-left::after {
+.logo-container::after {
     content: '';
     position: absolute;
     right: 0;
@@ -222,6 +219,13 @@ nav {
     width: 1px;
     background-color: var(--light-text);
     opacity: 0.3;
+}
+
+.logo-left {
+    font-size: 1.2rem;
+    min-width: 100px;
+    display: flex;
+    align-items: center;
 }
 
 .logo-center {
