--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,15 +1,20 @@
 <nav data-aos="fade-down" data-aos-duration="800">
-  <div class="logo">
-    <div class="logo-container">
-      <img
-        src="public/assets/icon/favicon.png"
-        alt="AML Logo"
-        class="nav-icon"
-      />
-      <span class="logo-left">Republic Act No. 9160</span>
+  <div class="navbar-flex">
+    <div class="logo">
+      <div class="logo-container">
+        <img
+          src="public/assets/icon/favicon.png"
+          alt="AML Logo"
+          class="nav-icon"
+        />
+        <span class="logo-left">Republic Act No. 9160</span>
+      </div>
+      <span class="logo-center">ANTI-MONEY LAUNDERING EXPERT SYSTEM</span>
+      <span class="logo-short">AML EXPERT SYSTEM</span>
     </div>
-    <span class="logo-center">ANTI-MONEY LAUNDERING EXPERT SYSTEM</span>
-    <span class="logo-short">AML EXPERT SYSTEM</span>
+    <button class="menu-toggle" aria-label="Open navigation">
+      <i class="fas fa-bars"></i>
+    </button>
   </div>
   <ul class="nav-links">
     <li><a href="#about">ABOUT</a></li>
