--- a/components/navbar.html
+++ b/components/navbar.html
@@ -14,7 +14,7 @@
         <span class="logo-left">Republic Act No. 9160</span>
       </a>
       <span class="logo-center">ANTI-MONEY LAUNDERING EXPERT SYSTEM</span>
-      <span class="logo-short">AML EXPERT SYSTEM</span>
+      <span class="logo-short">AMLA EXPERT SYSTEM</span>
     </div>
     <button class="menu-toggle" aria-label="Open navigation">
       <i class="fas fa-bars"></i>
