--- a/components/navbar.html
+++ b/components/navbar.html
@@ -17,7 +17,7 @@
       <span class="logo-short">AMLA EXPERT SYSTEM</span>
     </div>
     <button class="menu-toggle" aria-label="Open navigation">
-      <i class="fas fa-bars"></i>
+      <i class="bi bi-list"></i>
     </button>
   </div>
   <ul class="nav-links">
