--- a/components/navbar.html
+++ b/components/navbar.html
@@ -21,10 +21,10 @@
     </button>
   </div>
   <ul class="nav-links">
-    <li><a href="#about">ABOUT</a></li>
-    <li><a href="#services">SERVICES</a></li>
-    <li><a href="#resources">RESOURCES</a></li>
-    <li><a href="#contact">CONTACT</a></li>
-    <li><a href="#team">TEAM</a></li>
+    <li><a href="index.html#about">ABOUT</a></li>
+    <li><a href="index.html#services">SERVICES</a></li>
+    <li><a href="index.html#resources">RESOURCES</a></li>
+    <li><a href="index.html#contact">CONTACT</a></li>
+    <li><a href="index.html#team">TEAM</a></li>
   </ul>
 </nav>
