fix: Add href attribute to logo center and short spans for improved navigation

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -13,8 +13,10 @@
         />
         <span class="logo-left">Republic Act No. 9160</span>
       </a>
-      <span class="logo-center">ANTI-MONEY LAUNDERING EXPERT SYSTEM</span>
-      <span class="logo-short">AMLA EXPERT SYSTEM</span>
+      <span class="logo-center" href="index.html"
+        >ANTI-MONEY LAUNDERING EXPERT SYSTEM</span
+      >
+      <span class="logo-short" href="index.html">AMLA EXPERT SYSTEM</span>
     </div>
     <button class="menu-toggle" aria-label="Open navigation">
       <i class="bi bi-list"></i>
