fix: Update portfolio link logic and improve navbar structure for better navigation

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -12,15 +12,14 @@
           class="nav-icon"
         />
         <span class="logo-left">Republic Act No. 9160</span>
-      </a>
-      <a
+      </a>      <a
         href=""
         class="logo-container"
         style="text-decoration: none; color: inherit"
       >
       <span class="logo-left">Portfolio</span>
       </a>
-      <span class="logo-center" onclick="location.href='index.html'" style="cursor:pointer;"></span>
+      <span class="logo-center" onclick="location.href='index.html'" style="cursor:pointer;">
         ANTI-MONEY LAUNDERING EXPERT SYSTEM
       </span>
       <span class="logo-short" onclick="location.href='index.html'" style="cursor:pointer;">
