--- a/components/navbar.html
+++ b/components/navbar.html
@@ -29,12 +29,11 @@
     <button class="menu-toggle" aria-label="Open navigation">
       <i class="bi bi-list"></i>
     </button>
-  </div>
-  <ul class="nav-links">
-    <li><a href="index.html#about">ABOUT</a></li>
+  </div>  <ul class="nav-links">    <li><a href="index.html#about">ABOUT</a></li>
     <li><a href="index.html#services">SERVICES</a></li>
     <li><a href="index.html#resources">RESOURCES</a></li>
     <li><a href="index.html#contact">CONTACT</a></li>
     <li><a href="index.html#team">TEAM</a></li>
+    <li class="mobile-portfolio-link"><a href="" class="portfolio-nav-link">PORTFOLIO</a></li>
   </ul>
 </nav>
